additions to architecture

--- a/Code/API.Core/API.Core.csproj
+++ b/Code/API.Core/API.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0C113023-73E9-4058-A445-36B6AA007A95}</ProjectGuid>
+    <ProjectGuid>{FC4B1C4C-7016-40AA-AAB0-139D9F961117}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Code.Domain</RootNamespace>
-    <AssemblyName>Code.Domain</AssemblyName>
+    <RootNamespace>API.Core</RootNamespace>
+    <AssemblyName>API.Core</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,12 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core.cs" />
-    <Compile Include="Entities\Usermodel.cs" />
+    <Compile Include="CommonFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
