--- a/Services/AuthService/AuthService.csproj
+++ b/Services/AuthService/AuthService.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Code\Code.Data\Code.Data.csproj" />
+    <ProjectReference Include="..\..\Code\Code.Domain\Code.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
