--- a/Code/Code.Domain/Code.Domain.csproj
+++ b/Code/Code.Domain/Code.Domain.csproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core.cs" />
+    <Compile Include="Entities\Blogmodel.cs" />
     <Compile Include="Entities\Usermodel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
