--- a/Code/Code.Data/Code.Data.csproj
+++ b/Code/Code.Data/Code.Data.csproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BlogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -178,7 +179,6 @@
   <ItemGroup>
     <Folder Include="Configuration\" />
     <Folder Include="Infrastructure\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
