--- a/Code/Code.Data/Code.Data.csproj
+++ b/Code/Code.Data/Code.Data.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BlogRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
