--- a/Services/AuthService/AuthService.csproj
+++ b/Services/AuthService/AuthService.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Code\API.Core\API.Core.csproj" />
-    <ProjectReference Include="..\..\Code\Code.Data\Code.Data.csproj" />
+    <ProjectReference Include="..\..\Code\API.Core\Code.Common.csproj" />
+    <ProjectReference Include="..\..\Code\Code.Data\Code.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Code\Code.Domain\Code.Domain.csproj" />
   </ItemGroup>
 
