--- a/Code/Code.Data/packages.config
+++ b/Code/Code.Data/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Authentication.Core" version="2.3.0" targetFramework="net472" />
@@ -17,7 +18,7 @@
   <package id="Microsoft.AspNetCore.Routing" version="2.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net472" />
