--- a/API/blogapi/blogapi/APIGateway.csproj
+++ b/API/blogapi/blogapi/APIGateway.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Code\Code.Data\Code.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\Code\Code.Domain\Code.Domain.csproj" />
+    <ProjectReference Include="..\..\..\Code\Code.Services\Code.Services.csproj" />
+  </ItemGroup>
+
 </Project>
