--- a/Code/Code.Data/Code.Infrastructure.csproj
+++ b/Code/Code.Data/Code.Infrastructure.csproj
@@ -187,6 +187,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BlogRepository.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="Repositories\CommentRepository.cs" />
+    <Compile Include="Repositories\LogRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="UnitofWork\DapperUnitOfWork.cs" />
   </ItemGroup>
