--- a/Services/BlogService/BlogService.csproj
+++ b/Services/BlogService/BlogService.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Code\Code.Domain\Code.Domain.csproj" />
+    <ProjectReference Include="..\..\Code\Code.Services\Code.Services.csproj" />
+  </ItemGroup>
+
 </Project>
