--- a/Services/AdminService/AdminService.csproj
+++ b/Services/AdminService/AdminService.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Code\API.Core\Code.Methods.csproj" />
+    <ProjectReference Include="..\..\Code\Code.Domain\Code.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
