--- a/Services/AuthService/AuthService.csproj
+++ b/Services/AuthService/AuthService.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Code\API.Core\Code.Common.csproj" />
+    <ProjectReference Include="..\..\Code\API.Core\Code.Methods.csproj" />
     <ProjectReference Include="..\..\Code\Code.Data\Code.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Code\Code.Domain\Code.Domain.csproj" />
   </ItemGroup>
